fix(global.css): add missing background navigation color variable

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,4 +18,5 @@ body {
 	--dark-fg: #151515;
 	--note-bg: #4795cc;
 	--note-dark-bg: #205275;
+	--bg-nav: #99561426;
 }
